xpcom/threads/nsTimerImpl.h
@@ -114,6 +114,17 @@ private:
       NS_RELEASE(mCallback.o);
   }
 
+  bool IsRepeating() const {
+    PR_STATIC_ASSERT(TYPE_ONE_SHOT < TYPE_REPEATING_SLACK);
+    PR_STATIC_ASSERT(TYPE_REPEATING_SLACK < TYPE_REPEATING_PRECISE);
+    PR_STATIC_ASSERT(TYPE_REPEATING_PRECISE < TYPE_REPEATING_PRECISE_CAN_SKIP);
+    return mType >= TYPE_REPEATING_SLACK;
+  }
+
+  bool IsRepeatingPrecisely() const {
+    return mType >= TYPE_REPEATING_PRECISE;
+  }
+
   nsCOMPtr<nsIEventTarget> mEventTarget;
 
   void *                mClosure;
